--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -212,7 +212,7 @@
                   <i class="fa fa-search fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/merbabu.jpg" alt="">
+              <img class="img-fluid" src="img/merbabu.JPG" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Gunung Merbabu</h4>
@@ -650,13 +650,16 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GUNUNG PANDERMAN</h2>
                   <p class="item-intro text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu, Jawa Timur</p>
-                  <img class="img-fluid d-block mx-auto" src="img/jalurpanderman.jpg" alt="">
                   <ul class="list-inline">
                     <li>Ketinggian: 2.045 mdpl</li>
                     <li>Client: Explore</li>
                     <li>Koordinat: 8°06′43LU 112°55′20BT </li>
                   </ul>
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Gunung Panderman adalah sebuah gunung yang terletak di Kota Batu Malang yang memiliki puncak bernama Basundara. Nama gunung ini sendiri diambil dari nama seorang Belanda bernama Van Der Man yang mengagumi keindahan gunung ini pada waktu itu. Gunung Panderman adalah sebuah tempat wisata yang cocok bagi anda yang menyukai pendakian termasuk bagi anda yang masih pemula pada bidang pendakian.
+                    Gunung ini terletak di dusun Toyomerto Kelurahan Songgokerto Desa Pesanggrahan, Batu Malang. DusunToyomerto juga bisa dicapai dengan kendaraan umum dari kota Batu sekitar 3 Km yakni dengan menaiki bus jurusan Malang – Jombang/ Kediri kemudian turun di perempatan desa Pesanggarahan.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/jalurpanderman.jpg" alt="">
+                  <p>Untuk sampai ke puncak anda hanya membutuhkan waktu 2-3 jam. Jika anda menggunakan kendaraan pribadi, anda bisa menempuh perjalanan selama kurang lebih 30 menit dari kota Malang dan anda bisa menitipkannya di basecamp panderman yang berada di rumah paling ujung gapura panderman, disitu juga anda akan mendaftarkan siapa saja yang akan ikut mendaki. Jika anda berkendara dengan menggunakan sepeda motor, anda bisa menitipkan ke tempat penitipan sepeda motor yang dikelola oleh warga sekitar hanya dengan cukup membayar 5000/malam.
+                    Ada dua pos sebelum kita mencapai puncak gunung ini. Pertama kita akan menjumpai pos Latar Ombo yang berada di ketinggian 1604 mdpl. Tempat ini bisaanya digunakan untuk camping para pendaki. Disini juga tersedia sumber mata air yang masih sangat jernih sehingga anda dapat menggunakannya untuk minum juga memasak. Setelah anda melanjutkan perjalanan, anda akan menjumpai pos kedua yakni Watu Gede karena tempat ini memang terdapat banyak sekali batu besar yang bisa digunakan untuk beristirahat.</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -747,10 +750,37 @@
                   <p class="item-intro text-muted">Gn. Semeru, Pasrujambe, Kabupaten Lumajang, Jawa Timur</p>
                    <ul class="list-inline">
                     <li>Ketinggian: 3.744 mdpl</li>
-                    <li>Client: Explore</li>
+                    <li>Status: Aktif</li>
                     <li>Koordinat: 8°06' LS 112°55' BT. </li>
                   </ul>
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Gunung Semeru atau Gunung Meru adalah sebuah gunung berapi kerucut di Jawa Timur, Indonesia. Gunung Semeru merupakan gunung tertinggi di Pulau Jawa, dengan puncaknya Mahameru, 3.676 meter dari permukaan laut (mdpl). Gunung Semeru juga merupakan gunung berapi tertinggi ketiga di Indonesia setelah Gunung Kerinci di Sumatera dan Gunung Rinjani di Nusa Tenggara Barat[1]. Kawah di puncak Gunung Semeru dikenal dengan nama Jonggring Saloko. Gunung Semeru secara administratif termasuk dalam wilayah dua kabupaten, yakni Kabupaten Malang dan Kabupaten Lumajang, Provinsi Jawa Timur. Gunung ini termasuk dalam kawasan Taman Nasional Bromo Tengger Semeru.
+                    Diperlukan waktu sekitar empat hari untuk mendaki puncak gunung Semeru pergi-pulang. Untuk mendaki gunung dapat ditempuh lewat kota Malang atau Lumajang. Dari terminal Kota Malang naik angkutan umum menuju desa Tumpang. Disambung lagi dengan jeep atau truk/pickup yang banyak terdapat di belakang pasar terminal Tumpang dengan</p>
+                  <img class="img-fluid d-block mx-auto" src="img/jalursemeru.jpg" alt="">
+                  <p>Jalur/Rute Pendakian Gunung Semeru
+                    Setelah sampai dari pos Ranu Pani, kamu bisa memilih dua jalur untuk melakukan pendakian, yaitu: jalur Ayak-Ayak dan jalur Watu Rejeng, diantara kedua jalur tersebut memiliki perbedaan.
+                  Jalur Ayak-Ayak
+                    Jalur Ayak-Ayak relatif jarang dipilih oleh pendaki karena melalui trek yang berdebu dan berbatu. Belakangan ini jalur ini juga lebih sering ditutup oleh petugas demi keselamatan pendaki.
+                    Jalur / Rute Pendakian:
+                    Ranupani – Gunung Ayak-Ayak – Panggonan Cilik – Ranu Kumbolo = (5jam)
+                    Ranu Kumbolo – Oro-Oro Ombo = 1km (30 Menit)
+                    Oro-Oro Ombo – Cemoro Kandang = 1,5km (30 Menit)
+                    Cemoro Kandang – Jambangan = 3km (30 Menit)
+                    Jambangan – Kalimati= 2km (30 Menit)
+                    Kalimati – Arcopodo = 1,2km (2,5jam)
+                    Arcopodo – Cemoro Tunggal – Puncak Semeru = 1,5km (3-4jam)
+                    Jalur Watu Rejeng
+                    Jalur watu Rejeng ini sering dipilih oleh para pendaki, karena trek yang ditempuh tidak terlalu sulit. Recommended banget buat pendaki pemula di Gunung Semeru.
+                    Jalur / Rute Pendakian:
+                    Ranupani– Landengan Dowo = 3km (1,5jam)
+                    Landengan Dowo – Watu Rejeng = 3km (1,5jam)
+                    Watu Rejeng – Ranu Kumbolo = 4,5km (2jam)
+                    Ranu Kumbolo – Oro-Oro Ombo = 1km (30 Menit)
+                    Oro-Oro Ombo – Cemoro Kandang = 1,5km (30 Menit)
+                    Cemoro Kandang – Jambangan = 3km (30 Menit)
+                    Jambangan – Kalimati= 2km (30 Menit)
+                    Kalimati – Arcopodo = 1,2km (2,5jam)
+                    Arcopodo – Cemoro Tunggal – Puncak Semeru = 1,5km (3-4jam)
+                  </p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
