--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -598,7 +598,7 @@
                   <p class="item-intro text-muted">Gn. Rinjani, Kabupaten Lombok Barat, Lombok Tengah, dan Lombok Timur, Provinsi Nusa Tenggara Barat.</p>
                   <ul class="list-inline">
                     <li>Ketinggian: 3.726 mdpl</li>
-                    <li>Status: Explore</li>
+                    <li>Status: Aktif</li>
                     <li>Koordinat:  8°24′52S 116°27′35E </li>
                   </ul>
                   <p>Gunung Rinjani berlokasi di Pulau Lombok, Nusa Tenggara Barat. Gunung yang merupakan gunung berapi kedua tertinggi di Indonesia dengan ketinggian 3.726 m dpl serta terletak pada lintang 8º25' LS dan 116º28' BT ini merupakan gunung favorit bagi pendaki Indonesia karena keindahan pemandangannya. Gunung ini merupakan bagian dari Taman Nasional Gunung Rinjani yang memiliki luas sekitar 41.330 ha dan ini akan diusulkan penambahannya sehingga menjadi 76.000 ha ke arah barat dan timur.</p>
@@ -652,7 +652,7 @@
                   <p class="item-intro text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu, Jawa Timur</p>
                   <ul class="list-inline">
                     <li>Ketinggian: 2.045 mdpl</li>
-                    <li>Client: Explore</li>
+                    <li>Status: Tidak Aktif</li>
                     <li>Koordinat: 8°06′43LU 112°55′20BT </li>
                   </ul>
                   <p>Gunung Panderman adalah sebuah gunung yang terletak di Kota Batu Malang yang memiliki puncak bernama Basundara. Nama gunung ini sendiri diambil dari nama seorang Belanda bernama Van Der Man yang mengagumi keindahan gunung ini pada waktu itu. Gunung Panderman adalah sebuah tempat wisata yang cocok bagi anda yang menyukai pendakian termasuk bagi anda yang masih pemula pada bidang pendakian.
@@ -806,16 +806,16 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">GUNUNG WILISI</h2>
-                  <p class="item-intro text-muted">Gunung Wilis, Banaran, Pulung, Kabupaten Ponorogo, Jawa Timur<p>
+                  <h2 class="text-uppercase">GUNUNG MERBABU</h2>
+                  <p class="item-intro text-muted">Gn Merbabu, Suroteleng, Selo, Kabupaten Boyolali, Jawa Tengah<p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
                   <ul class="list-inline">
-                    <li>Ketinggian: 2.169 mdpl</li>
+                    <li>Ketinggian: 3.145 mdpl</li>
                     <li>Status: Akrif</li>
-                    <li>Koordinat: 7,808°LS 111,758°BT </li>
+                    <li>Koordinat: 7,5° LS 110,4° BT.  </li>
                   </ul>
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <img class="img-fluid d-block mx-auto" src="img/jalursemeru.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/jalurmerbabu.jpg" alt="">
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
