--- a/web_gunung/cekkuotapenanggungan.html
+++ b/web_gunung/cekkuotapenanggungan.html
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Cek Kuota Pendakian Gunung Penanggungan</h2>
+            <h2 class="section-heading text-uppercase">Cek Kuota Pendakian Gunung Lawu</h2>
             <h3 class="section-subheading text-muted" style="color: #fff;">Pilih tanggal mendaki dan lihat apakah kuota sudah penuh.</h3>
           </div>
         </div>
