--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -87,7 +87,7 @@
               <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Gunung</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted"></p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -95,7 +95,7 @@
               <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Registrasi</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted"></p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -103,7 +103,7 @@
               <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Jalur Pendakian</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted"></p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
@@ -119,7 +119,7 @@
               <i class="fa fa-blind fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Pemandu Wisata</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted"></p>
           </div>
         </div>
       </div>
