--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -425,7 +425,7 @@
       </div>
     </section>
 
-    <!-- Clients 
+    <!-- Clients --!>
     <section class="py-5">
       <div class="container">
         <div class="row">
