--- a/web_gunung/registrasi.html
+++ b/web_gunung/registrasi.html
@@ -112,7 +112,7 @@
             <div class="card-header" id="headingTwo">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: #000;">
-                  Gunung Kawi
+                  Gunung Rinjani
                 </button>
               </h5>
             </div>
@@ -184,7 +184,7 @@
             <div class="card-header" id="headingThree">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree" style="color: #000;">
-                  Gunung Penanggungan
+                  Gunung Lawu
                 </button>
               </h5>
             </div>
@@ -256,7 +256,7 @@
             <div class="card-header" id="headingThree">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree" style="color: #000;">
-                  Gunung Wilis
+                  Gunung Merbabu
                 </button>
               </h5>
             </div>
