--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cek Kuota</title>
+    <title>Form Registrasi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -65,67 +65,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Cek Kuota Pendakian Gunung Bromo</h2>
-            <h3 class="section-subheading text-muted" style="color: #fff;">Pilih tanggal mendaki dan lihat apakah kuota sudah penuh.</h3>
+            <h2 class="section-heading text-uppercase">Form Registrasi Pendakian Gunung</h2>
+            <h3 class="section-subheading text-muted" style="color: #fff;">Silahkan Mengisi Semua Form Registrasi Pendakian Gunung.</h3>
           </div>
         </div>
-      <div class="row">
-          <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Nama Anda *" required data-validation-required-message="Please enter your name.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Alamat Email Anda *" required data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Nomor Telepon Anda *" required data-validation-required-message="Please enter your phone number.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Pesan Anda *" required data-validation-required-message="Please enter a message."></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Kirim pesan</button>
-                </div>
-              </div>
           <form>
           <div class="col-lg-12">
-          <div class="form-group">
-            <label for="exampleFormControlSelect1" style="color: white;">Pililh Bulan</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>Januari</option>
-              <option>Februari</option>
-              <option>Maret</option>
-              <option>April</option>
-              <option>Mei</option>
-              <option>Juni</option>
-              <option>Juli</option>
-              <option>Agustus</option>
-              <option>September</option>
-              <option>Oktober</option>
-              <option>November</option>
-              <option>Desember</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1" style="color: white;">Pililh Tahun</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>2018</option>
-              <option>2019</option>
-              <option>2020</option>
-            </select>
-                  </div></div>
+          <div class="form-horizontal">
+            <label class="control-label col-sm-2" for="nama">Nama Anda:</label>
+            <div class="col-sm-10">
+                 <input type="text" class="form-control">
           </form><br/><br/>
           
          
