--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Form Registrasi Pendakian Gunung</h2>
-            <h3 class="section-subheading text-muted" style="color: #fff;">Silahkan Mengisi Semua Form Registrasi Pendakian Gunung.</h3>
+            <h3 class="section-subheading text-muted" style="color: #fff;">Silahkan Mengisi Semua Form untuk Registrasi Pendakian Gunung.</h3>
           </div>
         </div>
           <form>
@@ -74,7 +74,7 @@
           <div class="form-horizontal">
             <label class="control-label col-sm-2" for="nama">Nama Anda:</label>
             <div class="col-sm-10">
-                 <input type="text" class="form-control">
+                 <input type="text" class="form-control placeholder="Nama Anda *" required data-validation-required-message="Please enter your name."">
           </form><br/><br/>
           
          
