--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -72,9 +72,10 @@
           <form>
           <div class="col-lg-12">
           <div class="form-horizontal">
-            <label class="control-label col-sm-2" for="nama">Nama Anda:</label>
+            <label class="control-label col-sm-2" style="color: #fff;" for="nama">Nama Anda:</label>
             <div class="col-sm-10">
-                 <input type="text" class="form-control placeholder="Nama Anda *" required data-validation-required-message="Please enter your name."">
+                 <input type="text" class="form-control placeholder="Nama Anda *">
+                 <p class="help-block text-danger"></p>
           </form><br/><br/>
           
          
