--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -70,20 +70,20 @@
                           <div class="col-md-12">
                 <form class="form-horizontal" action="?" method="post">
                   <div class="form-group">
-                    <label for="nim" class="col-sm-2  style="color: #fff;"control-label">NIM</label>
-                    <div class="col-sm-7">
+                    <label for="nim" class="col-sm-2  "control-label" style="color: #fff;>NIM</label>
+                    <div class="col-sm-8">
                         <input type="text" class="form-control" id="nim" name="nim" placeholder="Isikan NIM">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="nama" class="col-sm-2 style="color: #fff;" control-label">Nama</label>
-                    <div class="col-sm-7">
+                    <label for="nama" class="col-sm-2 control-label" style="color: #fff;" >Nama</label>
+                    <div class="col-sm-8">
                         <input type="text" class="form-control" name="nama" placeholder="Isikan Nama Lengkap">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="alamat" class="col-sm-2 style="color: #fff;"control-label">Alamat</label>
-                    <div class="col-sm-7">
+                    <label for="alamat" class="col-sm-2 "control-label" style="color: #fff;>Alamat</label>
+                    <div class="col-sm-8">
                         <textarea name="alamat"class="form-control" placeholder="Isikan Alamat Lengkap"></textarea>
                     </div>
                   </div>
