--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -70,21 +70,33 @@
                           <div class="col-md-12">
                 <form class="form-horizontal" action="?" method="post">
                   <div class="form-group">
-                    <label for="nim" class="col-sm-2  "control-label" style="color: #fff;>NIM</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" id="nim" name="nim" placeholder="Isikan NIM">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="nama" class="col-sm-2 control-label" style="color: #fff;" >Nama</label>
-                    <div class="col-sm-8">
+                    <label for="nama" class="col-sm-1" "control-label">Nama</label>
+                    <div class="col-sm-9">
                         <input type="text" class="form-control" name="nama" placeholder="Isikan Nama Lengkap">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="alamat" class="col-sm-2 "control-label" style="color: #fff;>Alamat</label>
-                    <div class="col-sm-8">
+                    <label for="nama" class="col-sm-1" "control-label">Tanggal</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" name="tanggal" placeholder="Isikan Tanggal Pendakian">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="nama" class="col-sm-1" "control-label">Telp.</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" name="telp" placeholder="Isikan Nomor Telephone">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="alamat" class="col-sm-1" "control-label">Alamat</label>
+                    <div class="col-sm-9">
                         <textarea name="alamat"class="form-control" placeholder="Isikan Alamat Lengkap"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="nama" class="col-sm-1" "control-label">Email</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" name="email" placeholder="Isikan Alamat email">
                     </div>
                   </div>
                   <div class="col-sm-offset-2 col-sm-10">
