--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -100,8 +100,7 @@
                     </div>
                   </div>
                   <div class="col-sm-offset-2 col-sm-10">
-                      <button type="submit" class="btn btn-info">Simpan</button>
-                      <button type="reset" class="btn btn-info">Batal</button>
+                      <button type="submit" class="btn btn-warning">Simpan</button>
                   </div>
                 </form>
           </div>
