--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -70,6 +70,16 @@
                           <div class="col-md-12">
                 <form class="form-horizontal" action="?" method="post">
                   <div class="form-group">
+                    <label for="exampleFormControlSelect1" style="color: white;">Pililh Gunung</label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                        <option>Gunung Bromo</option>
+                        <option>Gunung Rinjani</option>
+                        <option>Gunung Panderman</option>
+                        <option>Gunung Lawu</option>
+                        <option>Gunung Semeru</option>
+                        <option>Gunung Merbabu</option>
+                   </select>
+                  <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Nama</label>
                     <div class="col-sm-9">
                         <input type="text" class="form-control" name="nama" placeholder="Isikan Nama Lengkap">
