--- a/web_gunung/registrasi.html
+++ b/web_gunung/registrasi.html
@@ -104,6 +104,7 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotabromo.html" style="color: black;">Cek Kuota Pendaki</a>
+                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
