--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -70,7 +70,8 @@
                           <div class="col-md-12">
                 <form class="form-horizontal" action="?" method="post">
                   <div class="form-group">
-                    <label for="exampleFormControlSelect1" style="color: white;">Pililh Gunung</label>
+                    <label for="exampleFormControlSelect1" class="col-sm-1" style="color: white;">Pililh Gunung</label>
+                    <div class="col-sm-9">
                     <select class="form-control" id="exampleFormControlSelect1">
                         <option>Gunung Bromo</option>
                         <option>Gunung Rinjani</option>
@@ -79,6 +80,7 @@
                         <option>Gunung Semeru</option>
                         <option>Gunung Merbabu</option>
                    </select>
+                    </div>
                   <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Nama</label>
                     <div class="col-sm-9">
