--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -70,9 +70,9 @@
                           <div class="col-md-12">
                 <form class="form-horizontal" action="?" method="post">
                   <div class="form-group">
-                    <label for="exampleFormControlSelect1" class="col-sm-1" style="color: white;">Pililh Gunung</label>
+                    <label for="exampleFormControlSelect1" class="col-sm-1" >Pililh Gunung</label>
                     <div class="col-sm-9">
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <select class="form-control" placeholder="Pilih Gunung" id="exampleFormControlSelect1">
                         <option>Gunung Bromo</option>
                         <option>Gunung Rinjani</option>
                         <option>Gunung Panderman</option>
