--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -72,7 +72,8 @@
                   <div class="form-group">
                     <label for="exampleFormControlSelect1" class="col-sm-1" >Pililh Gunung</label>
                     <div class="col-sm-9">
-                    <select class="form-control" placeholder="Pilih Gunung" id="exampleFormControlSelect1">
+                    <select class="form-control" id="exampleFormControlSelect1">
+                        <option>Pilih Gunung</option>
                         <option>Gunung Bromo</option>
                         <option>Gunung Rinjani</option>
                         <option>Gunung Panderman</option>
@@ -111,7 +112,7 @@
                         <input type="text" class="form-control" name="email" placeholder="Isikan Alamat email">
                     </div>
                   </div>
-                  <div class="col-sm-offset-2 col-sm-10">
+                  <div class="col-sm-offset-4 col-sm-10">
                       <button type="submit" class="btn btn-warning">Simpan</button>
                   </div>
                 </form>
