--- a/web_gunung/formregistrasi.html
+++ b/web_gunung/formregistrasi.html
@@ -85,31 +85,31 @@
                   <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Nama</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="nama" placeholder="Isikan Nama Lengkap">
+                        <input type="text" class="form-control" name="nama" placeholder="Masukkan Nama Lengkap Anda">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Tanggal</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="tanggal" placeholder="Isikan Tanggal Pendakian">
+                        <input type="text" class="form-control" name="tanggal" placeholder="Masukkan Tanggal Pendakian">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Telp.</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="telp" placeholder="Isikan Nomor Telephone">
+                        <input type="text" class="form-control" name="telp" placeholder="Masukkan Nomor Telephone">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="alamat" class="col-sm-1" "control-label">Alamat</label>
                     <div class="col-sm-9">
-                        <textarea name="alamat"class="form-control" placeholder="Isikan Alamat Lengkap"></textarea>
+                        <textarea name="alamat"class="form-control" placeholder="Masukkan Alamat Lengkap"></textarea>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="nama" class="col-sm-1" "control-label">Email</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="email" placeholder="Isikan Alamat email">
+                        <input type="text" class="form-control" name="email" placeholder="Masukkan Alamat email">
                     </div>
                   </div>
                   <div class="col-sm-offset-4 col-sm-10">
