--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Melayani</h2>
-            <h3 class="section-subheading text-muted">Kami sebagai . . . .</h3>
+            <h3 class="section-subheading text-muted">Kami sebagai website yang melayani berbagai kebutuhan para pendaki akan informasi </h3>
           </div>
         </div>
         <div class="row text-center">
@@ -87,7 +87,7 @@
               <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Gunung</h4>
-            <p class="text-muted"></p>
+            <p class="text-muted">Menyajikan semua informasi mengenai gunung yang ada diIndonesia secara lengkap. Mulai dari lokasi,ketinggian, status gunung dan keadaan gunung </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -95,7 +95,7 @@
               <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Registrasi</h4>
-            <p class="text-muted"></p>
+            <p class="text-muted">Layanan reistrasi pendakian gunung secara online yang dapat dilakukan dimana saja untuk memudahkan pendataan dari calon pendaki</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -103,7 +103,7 @@
               <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Jalur Pendakian</h4>
-            <p class="text-muted"></p>
+            <p class="text-muted">Menyajikan informasi mengenai jalur pendakian dari gunung agar dapat memberikan informasi kepada calon pendaki agar meminimalisir tejadinya pendaki yang tersesat. </p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
@@ -111,7 +111,7 @@
               <i class="fa fa-suitcase fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Persiapan</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">a maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
