--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -111,7 +111,7 @@
               <i class="fa fa-suitcase fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Persiapan</h4>
-            <p class="text-muted">a maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Menyajikan informasi seputar perbekelan yang dapat menjadi bahan pesiapan pendaki sebelum melakukan pendakian gunung.</p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
