--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -119,7 +119,7 @@
               <i class="fa fa-blind fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Pemandu Wisata</h4>
-            <p class="text-muted"></p>
+            <p class="text-muted">Terdapat layanan pemandu wisata bagi para pendaki pemula yang membutuhkan pembandu jalan selama pendakian.</p>
           </div>
         </div>
       </div>
