--- a/web_gunung/registrasi.html
+++ b/web_gunung/registrasi.html
@@ -104,7 +104,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotabromo.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
@@ -113,7 +112,7 @@
             <div class="card-header" id="headingTwo">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: #000;">
-                  Gunung Rinjani
+                  Gunung Kawi
                 </button>
               </h5>
             </div>
@@ -142,7 +141,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotakawi.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
@@ -179,7 +177,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotapanderman.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
@@ -187,7 +184,7 @@
             <div class="card-header" id="headingThree">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree" style="color: #000;">
-                  Gunung Lawu
+                  Gunung Penanggungan
                 </button>
               </h5>
             </div>
@@ -216,7 +213,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotapenanggungan.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
@@ -253,7 +249,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotasemeru.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
@@ -261,7 +256,7 @@
             <div class="card-header" id="headingThree">
               <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree" style="color: #000;">
-                  Gunung Merbabu
+                  Gunung Wilis
                 </button>
               </h5>
             </div>
@@ -290,7 +285,6 @@
                   </div><hr>
                   <a>Anda memahami, menyetujui, syarat dan ketentuan-ketentuan di atas:</a><br/><br/>
                   <a class="btn btn-primary text-uppercase js-scroll-trigger" href="cekkuotawilis.html" style="color: black;">Cek Kuota Pendaki</a>
-                  <a class="btn btn-primary text-uppercase js-scroll-trigger" href="formregistrasi.html" style="color: black;">Registrasi</a>
               </div>
             </div>
           </div>
