--- a/web_gunung/cekkuotabromo.html
+++ b/web_gunung/cekkuotabromo.html
@@ -109,31 +109,31 @@
           <tbody>
             <tr>
               <td>Selasa, 8 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Rabu, 9 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Kamis, 10 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Selasa, 8 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Rabu, 9 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Kamis, 10 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Selasa, 8 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Rabu, 9 Mei 2018</td>
