--- a/web_gunung/cekkuotakawi.html
+++ b/web_gunung/cekkuotakawi.html
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Cek Kuota Pendakian Gunung Rinjani</h2>
+            <h2 class="section-heading text-uppercase">Cek Kuota Pendakian Gunung Kawi</h2>
             <h3 class="section-subheading text-muted" style="color: #fff;">Pilih tanggal mendaki dan lihat apakah kuota sudah penuh.</h3>
           </div>
         </div>
@@ -109,23 +109,23 @@
           <tbody>
             <tr>
               <td>Selasa, 8 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Rabu, 9 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Kamis, 10 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Selasa, 8 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Rabu, 9 Mei 2018</td>
-              <td><a href="">312</a></td>
+              <td><a href="booking.html">312</a></td>
             </tr>
             <tr>
               <td>Kamis, 10 Mei 2018</td>
