--- a/web_gunung/selesai.html
+++ b/web_gunung/selesai.html
@@ -66,7 +66,7 @@
         <div class="intro-text">
           <div class="intro-heading text-uppercase">Selamat Anda Sudah Mmesan</div>
           <div class="intro-lead-in">Semoga Layanan Kami Memuaskan</div>
-          <br/><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Kembali ke Home</a>
+          <br/><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="index.html">Kembali ke Home</a>
         </div>
       </div>
     </header>
