--- a/web_gunung/test.html
+++ b/web_gunung/test.html
@@ -52,7 +52,7 @@
         </div>
           
           <form>
-          <div class="col-lg-8">
+          <div class="col-lg-4">
 		  <div class="form-group">
             <label for="exampleFormControlSelect1" style="color: white;">Pililh Tanggal</label>
             <select class="form-control" id="exampleFormControlSelect1">
@@ -101,11 +101,24 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1" style="color: white;">Pililh Tahun</label>
             <select class="form-control" id="exampleFormControlSelect1">
-              <option>2018</option>
-              <option>2019</option>
-              <option>2020</option>
             </select>
-                  </div></div>
+                  </div>
+	<div class="form-group">
+            <label for="exampleFormControlSelect1" style="color: white;">Pemasukan</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+            </select>
+                  </div>
+	<div class="form-group">
+            <label for="exampleFormControlSelect1" style="color: white;">Pengeluaran</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+            </select>
+                  </div>
+	<div class="form-group">
+            <label for="exampleFormControlSelect1" style="color: white;">Keterangan</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+            </select>
+                  </div>
+		  </div>
           </form><br/><br/>
       </div>
     </section>
